# trading_platform

./: .cursorrules  .dockerignore  .env.template  .envrc.example  .flake8  .gitignore  .portfolio-lint-config.py  .pre-commit-config.yaml  .risk-lint-config.py  .shellcheckrc  2024_full_year_backtest.py  ACCOUNT_SIZE_OPTIMIZATION_ANALYSIS.md  ADAPTIVE_OPTIONS_STRATEGY_SUMMARY.md  AGGRESSIVE_ALLOCATION_DEPLOYMENT_SUMMARY.md  AI_ENHANCED_STRATEGIES_GUIDE.md  ALTERNATIVE_ALLOCATION_ANALYSIS.md  AUTOMATED_BACKTEST_GUIDE.md  AUTOMATED_STRATEGY_SELECTION_GUIDE.md  AVAILABLE_SERVICES_FOR_RESTORE.md  BACKTEST_CALCULATION_ISSUES.md  BACKTEST_FIXES_APPLIED.md  CAPITAL_ALLOCATION_FIX_SUMMARY.md  CLAUDE.md  COMPLETE_FIX_SUMMARY.md  COMPLETE_TRADING_OPTIMIZATION_SUMMARY.md  CORRECTED_ALLOCATION_BACKTEST_RESULTS.md  CURSOR_RULES_VISUAL_GUIDE.md  DASHBOARD_URLS_SUMMARY.md  DEPLOY_MAP.md  Dockerfile.backtest-script  Dockerfile.dev  Dockerfile.k8s  Dockerfile.optimized  Dockerfile.quick-wins  Dockerfile.risk-management  Dockerfile.test  Dockerfile.validation  ELLIOTT_WAVE_SERVICE_BACKTESTING_GUIDE.md  FINAL_DEPLOYMENT_STATUS.md  GitVersion.yml  (+285 more)
.cursor/: README.md
.grc/: trading-logs.conf
alembic/: env.py
backtests/: README.md  adaptive_wave_focused_backtest.py  aggressive_allocation_backtest.py  aggressive_allocation_backtest_clean.py  comprehensive_2year_backtest_polygon.py  comprehensive_comparison_backtest.py  comprehensive_two_year_backtest.py  conservative_news_enhanced_backtest.py  consistent_data_variance_backtest.py  corrected_allocation_backtest_simple.py  delayed_news_enhanced_backtest.py  direct_proven_hybrid_backtest.py  enhanced_recommendations_backtest.py  example_kubernetes_elliott_wave_backtest.py  focused_delayed_news_backtest.py  hybrid_backtest_direct.py  improved_strategies_backtest.py  market_timing_backtest.py  multi_strategy_ensemble_backtest.py  multiple_two_year_backtest.py  news_enhanced_market_regime_backtest.py  optimized_public_com_backtest.py  options_vs_stocks_backtest.py  public_com_two_year_backtest.py  realistic_multi_year_backtest.py  run_automated_backtest_now.py  run_simple_automated_backtest.py  simple_comprehensive_backtest.py  simple_strategies_backtest.py  strategy_allocation_backtest.py  two_year_aggressive_backtest.py  two_year_realistic_backtest.py
config/: advanced_exit_strategies_config.json  advanced_trading_strategies.yaml  elliott_wave_1year_backtest_results.json  elliott_wave_backtest_results.json  live_trading_strategies.yaml  live_trading_strategies_backup_20250929_075925.yaml  llm_providers.yaml  market-dashboard-import.json  paper_trading_config.json  paper_trading_engine.json  paper_trading_k8s_deployment.yaml  paper_trading_status.json  paper_trading_strategies.yaml  paper_trading_strategies.yaml.backup_20250929_115240  paper_trading_strategies.yaml.backup_20250929_115242  public_com_monitoring.json  registry.env  ultra_advanced_trading_strategies.yaml  validation_scripts.json
demo/: demo_backtest_name_tracking.py  demo_centralized_backtest_config.py  demo_comprehensive_options_backtest.py  demo_event_driven_trading.py  demo_fundamental_analysis.py  demo_fundamental_screener.py  demo_ichimoku_strategy.py  demo_llm_stock_analysis.py  demo_llm_strategy_results.py  (+3 more)
(+2244 files in other folders)
